# bevfusion-triton

./: .gitignore  README.md  pyproject.toml  train.py
configs/: config.yaml
configs/optimizer/: default.yaml  seg.yaml
configs/runtime/: default.yaml  det.yaml  seg.yaml
core/: __init__.py
core/bbox/: __init__.py  box_np_ops.py
core/evaluation/: __init__.py  bbox_overlaps.py
core/mask/: __init__.py  mask_target.py  structures.py  utils.py
core/points/: __init__.py  base_points.py  cam_points.py  depth_points.py  lidar_points.py  radar_points.py
datasets/: __init__.py  custom_3d.py  nuscenes_dataset.py  nuscenes_dataset_legacy.py  utils.py
datasets/pipelines/: __init__.py  compose.py  dbsampler.py  formating.py  loading.py  loading_utils.py  transforms_3d.py  utils.py
docs/: INSTALL_en.md  INSTALL_zh.md  README_zh.md  TODO_en.md
lit/: batch_adapter.py  lit_data_module.py  lit_module.py
models/: __init__.py
models/backbones/: second.py  sparse_encoder.py  swin_transformer.py
models/fusers/: __init__.py  add.py  conv.py
models/fusion_models/: __init__.py  bevfusion.py
models/heads/: __init__.py
models/helper/: __init__.py  amp.py  conv.py  conv_module.py  norm.py  upsample.py
models/losses/: __init__.py  builder.py  cross_entropy_loss.py  focal_loss.py  gaussian_focal_loss.py  l1_loss.py  smooth_l1_loss.py  utils.py  varifocal_loss.py
models/necks/: __init__.py  generalized_lss.py  second.py
models/vtransforms/: base.py  depth_lss.py
ops/: __init__.py  sparse_block.py
ops/bev_pool/: __init__.py  bev_pool_legacy.py
ops/iou3d/: __init__.py  iou3d_utils_legacy.py
ops/roi_align/: __init__.py  roi_align_legacy.py
ops/roiaware_pool3d/: __init__.py  points_in_boxes_legacy.py  roiaware_pool3d_legacy.py  (+1 more)
tools/: __init__.py  create_data.py  visualize.py
utils/: __init__.py  box_utils.py  config.py  lazy_inline_extension.py  misc.py  path.py
visualization_toolkit/: __init__.py  callback.py  core.py
(+89 files in other folders)
