[project]
name = "bevfusion-triton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.2",
    "fire>=0.7.1",
    "hydra-core>=1.3.2",
    "joblib>=1.5.3",
    "lightning>=2.6.1",
    "numba>=0.64.0",
    "numpy>=1.26.4",
    "nuscenes-devkit>=1.2.0",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "scipy>=1.17.1",
    "shapely>=2.0.7",
    "timm>=1.0.25",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "triton>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "ccimport>=0.4.4",
    "cumm-cu130>=0.8.2",
    "ninja>=1.13.0",
    "pccm>=0.4.16",
    "pytest>=9.0.2",
    "setuptools>=41.0",
    "wheel>=0.46.3",
    "spconv-cu130>=2.3.8",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]
cumm-cu130 = [
  { git = "https://github.com/FindDefinition/cumm.git", tag = "v0.8.2" }
]
spconv-cu130 = [
  { git = "https://github.com/traveller59/spconv.git", tag = "v2.3.8" }
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv]
override-dependencies = [
    "cumm-cu130>=0.8.2",
]

[tool.uv.extra-build-dependencies]
cumm-cu130 = ["torch"]
spconv-cu130 = ["cumm-cu130", "torch"]


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[tool.ruff]
builtins = ["_"]
line-length = 100
cache-dir = "~/.cache/ruff"
exclude = [".venv", "third_party"]
extension = { mdx = "markdown", qmd = "markdown" }

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 100
